exports[`does not insert duplicate default import for existing module 1`] = `
"
    import React, { Component } from 'react';

    export default () => <div>Hello world</div>;
  "
`;

exports[`does not insert duplicate empty import for new module 1`] = `
"
    import { Component } from 'react';
    import 'babel/polyfill';

    export default () => <div>Hello world</div>;
  "
`;

exports[`does not insert duplicate named import for existing module 1`] = `
"
    import { Component } from 'react';

    export default () => <div>Hello world</div>;
  "
`;

exports[`inserts default import for existing module 1`] = `
"
    import React, { Component } from 'react';

    export default () => <div>Hello world</div>;
  "
`;

exports[`inserts default import for new module 1`] = `
"import React from 'react';

import lodash from "lodash";

export default () => <div>Hello world</div>;"
`;

exports[`inserts empty import for new module 1`] = `
"import React from 'react';

import "babel/polyfill";

export default () => <div>Hello world</div>;"
`;

exports[`inserts named import for existing module 1`] = `
"
    import React, { Component } from 'react';

    export default () => <div>Hello world</div>;
  "
`;

exports[`inserts named import for new module 1`] = `
"import React from 'react';

import { Components } from "exponent";

export default () => <div>Hello world</div>;"
`;

exports[`test does not insert duplicate default import for existing module 1`] = `
"
    import React, { Component } from \'react\';

    export default () => <div>Hello world</div>;
  "
`;

exports[`test does not insert duplicate empty import for new module 1`] = `
"
    import { Component } from \'react\';
    import \'babel/polyfill\';

    export default () => <div>Hello world</div>;
  "
`;

exports[`test does not insert duplicate named import for existing module 1`] = `
"
    import { Component } from \'react\';

    export default () => <div>Hello world</div>;
  "
`;

exports[`test inserts default import for existing module 1`] = `
"
    import React, { Component } from \'react\';

    export default () => <div>Hello world</div>;
  "
`;

exports[`test inserts default import for new module 1`] = `
"import React from \'react\';

import lodash from \"lodash\";

export default () => <div>Hello world</div>;"
`;

exports[`test inserts empty import for new module 1`] = `
"import React from \'react\';

import \"babel/polyfill\";

export default () => <div>Hello world</div>;"
`;

exports[`test inserts named import for existing module 1`] = `
"
    import React, { Component } from \'react\';

    export default () => <div>Hello world</div>;
  "
`;

exports[`test inserts named import for new module 1`] = `
"import React from \'react\';

import { Components } from \"exponent\";

export default () => <div>Hello world</div>;"
`;
